by jittering sample directions.  Setting -bj 1 is statistically
equivalent to linear interpolation of receiver bins, rather than
the default piecewise constant representation (-bj 0).

Added rtrace -pA option for total radiometric flux output.

Fixed major bug in gensdaymtx that was causing the solar contributions
to be about 40x what they should have been.

Fixed major bug in genssky where it was not using the correct location
information.

Fixed issue with perturbed ray transmission in transparent materials
applied to Phong-smoothed surfaces.  This has been a long-standing
issue, and the fix is a bit of a hack as it relies on the first
surface modifier being named "Phong", which corresponds to the
current output of genrev and gensurf when using the -s option.

TW did some profiling on Windows and found a lot of time being
spent in setting and checking errno, which is a system call there
(unlike Unix).  A workaround was found that reduces this time and
can make a 35% or better speed-up with rcontrib.

TW replaced calls to rand() under Windows with better, faster
random number generator.  Unix not affected as rand48() works
well enough.

Made a list of tools that do and do not support hyperspectral
data and put it in "doc/notes/hyperspectral.txt".

TW introduced experimental multi-processing capability for
rcontrib under Windows.  Not fully tested against hangs, but
same semantics as -n option under Unix.

Changed rxfluxmtx -W option to -v for consistency, but had
to eliminate boolean switch values other than 0, 1, +, and -,
which are the only ones people use, hopefully.  Lettered
boolean flag settings have always been confusing.

The above changes were included in official LBNL patch
release 6.0.2.

Created csv2radspec tool to convert the Climate & Comfort Lab's
Spectral Materials Database <https://spectraldb.com/> CSV file
<https://github.com/C38C/SpectralDB/raw/refs/heads/main/spectraldb.csv>
to a set of Radiance materials.